--- a/DatingTutorial.API/.gitignore
+++ b/DatingTutorial.API/.gitignore
@@ -1,4 +1,11 @@
-.vscode
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
 bin
 obj
 *.db
