--- a/DatingTutorial.API/appsettings.json
+++ b/DatingTutorial.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dovry0kk4",
+    "ApiKey": "671215112143167",
+    "ApiSecret": "kLkiwQZPpJqtpVTwrU8i6nSnKxM"
+  }
 }
