--- a/DatingTutorial.API/appsettings.json
+++ b/DatingTutorial.API/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=datingapp.db"
+    "DefaultConnection": "Server=localhost; Database=datingapp; Uid=appuser; Pwd=Bianka1616-"
   },
   "Logging": {
     "LogLevel": {
